--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
+<head>
+    <title>Drawing app</title>
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+<div id="toolbar">
+    <div id="rad">
+        Radius <span id="radval">10</span>
+        <div id="decrad" class="radcontrol">-</div>
+        <div id="incrad" class="radcontrol">+</div>
+    </div>
+</div>
 
-    </head>
-    <body>
-
-    <canvas id="canvas" width="640" height="480" style="display: block"></canvas>
-    <script src="js/main.js"></script>
-
-    </body>
+<canvas id="canvas" width="640" height="480" style="display: block"></canvas>
+<script src="js/main.js"></script>
+<script src="js/radius.js"></script>
+</body>
 </html>
